--- a/73_Data_Viz_Mapas.ipynb
+++ b/73_Data_Viz_Mapas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvAbhZXnJ3ECL5Rb0PH/+0",
+      "authorship_tag": "ABX9TyN02dntkQol/wEBBoHQAhnJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -334,6 +334,138 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Com nosso mapa interativo plotado, nós podemos também adicionar nossos markers, que são os anúncios.\n",
+        "\n",
+        "Eles serão plotados como marcadores em suas respectivas localidades, com suas descrições sendo exibidas ao passarmos o mouse por cima deles.\n",
+        "\n",
+        "Para isso, vamos criar uma função, que percorre nossos pontos e os adiciona ao mapa."
+      ],
+      "metadata": {
+        "id": "VYmJxa6y04-n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# adicionando os marcadores\n",
+        "for lat, lon, listing in zip(latitude, longitude, listings):\n",
+        "    folium.Marker(location=[float(lat), float(lon)], popup=listing).add_to(nyc)\n",
+        "# plotando o mapa\n",
+        "nyc.save('nyc_map.html')\n",
+        "nyc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "fh5iqmoQ06nW",
+        "outputId": "d0458581-4d13-4938-9b75-246d1774f51f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'latitude' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-815d6d96ea30>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# adicionando os marcadores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlisting\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlatitude\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlongitude\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlistings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mfolium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMarker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpopup\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlisting\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_to\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnyc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# plotando o mapa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnyc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'nyc_map.html'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'latitude' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Além disso, podemos também facilmente salvar nosso mapa finalizado como um artigo html, para ser aproveitado de outras formas.\n",
+        "\n",
+        "Também é possível salvar como json."
+      ],
+      "metadata": {
+        "id": "3o_ITHZ_09yn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# salvando\n",
+        "nyc.save('nyc_map.html')"
+      ],
+      "metadata": {
+        "id": "zT-2G3uq1AGC"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install pydeck -q"
+      ],
+      "metadata": {
+        "id": "MW17KbtB1CJ_",
+        "outputId": "72dff35c-9f7d-4858-d4e9-fefe15c0a803",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m21.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#mapanyc\n",
+        "\n",
+        "# criando a camada\n",
+        "layer = pdk.Layer(\n",
+        "    'HexagonLayer',  # `type` positional argument is here\n",
+        "    df_map,\n",
+        "    get_position=['longitude', 'latitude'],\n",
+        "    auto_highlight=True,\n",
+        "    elevation_scale=50,\n",
+        "    pickable=True,\n",
+        "    elevation_range=[0, 3000],\n",
+        "    extruded=True,\n",
+        "    coverage=1)\n",
+        "\n",
+        "# definindo a visão\n",
+        "view_state = pdk.ViewState(\n",
+        "    longitude=-73.8828923,\n",
+        "    latitude=40.7267795,\n",
+        "    zoom=6,\n",
+        "    min_zoom=5,\n",
+        "    max_zoom=15,\n",
+        "    pitch=40.5,\n",
+        "    bearing=-27.36)\n",
+        "\n",
+        "# combinando os dois em um deck, e visualizando\n",
+        "r = pdk.Deck(layers=[layer], initial_view_state=view_state)\n",
+        "\n",
+        "# salvando como html\n",
+        "r.to_html('hexagon-example.html')"
+      ],
+      "metadata": {
+        "id": "7PdkxDD01FCX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
