--- a/73_Data_Viz_Mapas.ipynb
+++ b/73_Data_Viz_Mapas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN02dntkQol/wEBBoHQAhnJ",
+      "authorship_tag": "ABX9TyM7kJLaR4EdZqARTHl2pqKP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -410,11 +410,11 @@
         "pip install pydeck -q"
       ],
       "metadata": {
-        "id": "MW17KbtB1CJ_",
-        "outputId": "72dff35c-9f7d-4858-d4e9-fefe15c0a803",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MW17KbtB1CJ_",
+        "outputId": "72dff35c-9f7d-4858-d4e9-fefe15c0a803"
       },
       "execution_count": 8,
       "outputs": [
@@ -462,10 +462,197 @@
         "r.to_html('hexagon-example.html')"
       ],
       "metadata": {
-        "id": "7PdkxDD01FCX"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "7PdkxDD01FCX",
+        "outputId": "df3c404b-ab08-4e1d-84f5-39e90c9f64f0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'pdk' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-009bf3ee3a3e>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# criando a camada\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m layer = pdk.Layer(\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;34m'HexagonLayer'\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# `type` positional argument is here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mdf_map\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'pdk' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# código de exemplo do PyDeck\n",
+        "import pydeck as pdk\n",
+        "\n",
+        "UK_ACCIDENTS_DATA = 'https://raw.githubusercontent.com/visgl/deck.gl-data/master/examples/3d-heatmap/heatmap-data.csv'\n",
+        "\n",
+        "layer = pdk.Layer(\n",
+        "    'HexagonLayer',  # `type` positional argument is here\n",
+        "    UK_ACCIDENTS_DATA,\n",
+        "    get_position=['lng', 'lat'],\n",
+        "    auto_highlight=True,\n",
+        "    elevation_scale=50,\n",
+        "    pickable=True,\n",
+        "    elevation_range=[0, 3000],\n",
+        "    extruded=True,\n",
+        "    coverage=1)\n",
+        "\n",
+        "# Set the viewport location\n",
+        "view_state = pdk.ViewState(\n",
+        "    longitude=-1.415,\n",
+        "    latitude=52.2323,\n",
+        "    zoom=6,\n",
+        "    min_zoom=5,\n",
+        "    max_zoom=15,\n",
+        "    pitch=40.5,\n",
+        "    bearing=-27.36)\n",
+        "\n",
+        "# Combined all of it and render a viewport\n",
+        "r = pdk.Deck(layers=[layer], initial_view_state=view_state)\n",
+        "r.to_html('hexagon-example.html')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 500
+        },
+        "id": "nFy7gwRx1K3W",
+        "outputId": "a70b4c12-ff1a-498e-95ed-93a2e21af950"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "google.colab.output.setIframeHeight(500, true, {minHeight: 500, maxHeight: 500})"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<!DOCTYPE html>\n",
+              "<html>\n",
+              "  <head>\n",
+              "    <meta http-equiv=\"content-type\" content=\"text/html; charset=UTF-8\" />\n",
+              "    <title>pydeck</title>\n",
+              "        <script src=\"https://api.tiles.mapbox.com/mapbox-gl-js/v1.13.0/mapbox-gl.js\"></script>\n",
+              "        <link rel=\"stylesheet\" href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css\" />\n",
+              "    <link rel=\"stylesheet\" href=\"https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css\" />\n",
+              "    <script src='https://cdn.jsdelivr.net/npm/@deck.gl/jupyter-widget@~9.0.*/dist/index.js'></script>\n",
+              "    <style>\n",
+              "    body {\n",
+              "  margin: 0;\n",
+              "  padding: 0;\n",
+              "  overflow: hidden;\n",
+              "}\n",
+              "\n",
+              "#deck-container {\n",
+              "  width: 100vw;\n",
+              "  height: 100vh;\n",
+              "}\n",
+              "\n",
+              "#deck-container canvas {\n",
+              "  z-index: 1;\n",
+              "  background: none;\n",
+              "}\n",
+              "    </style>\n",
+              "  </head>\n",
+              "  <body>\n",
+              "    <div id=\"deck-container\">\n",
+              "    </div>\n",
+              "  </body>\n",
+              "  <script>\n",
+              "    const container = document.getElementById('deck-container');\n",
+              "    const jsonInput = {\n",
+              "  \"initialViewState\": {\n",
+              "    \"bearing\": -27.36,\n",
+              "    \"latitude\": 52.2323,\n",
+              "    \"longitude\": -1.415,\n",
+              "    \"maxZoom\": 15,\n",
+              "    \"minZoom\": 5,\n",
+              "    \"pitch\": 40.5,\n",
+              "    \"zoom\": 6\n",
+              "  },\n",
+              "  \"layers\": [\n",
+              "    {\n",
+              "      \"@@type\": \"HexagonLayer\",\n",
+              "      \"autoHighlight\": true,\n",
+              "      \"coverage\": 1,\n",
+              "      \"data\": \"https://raw.githubusercontent.com/visgl/deck.gl-data/master/examples/3d-heatmap/heatmap-data.csv\",\n",
+              "      \"elevationRange\": [\n",
+              "        0,\n",
+              "        3000\n",
+              "      ],\n",
+              "      \"elevationScale\": 50,\n",
+              "      \"extruded\": true,\n",
+              "      \"getPosition\": \"@@=[lng, lat]\",\n",
+              "      \"id\": \"7ced7978-cbd8-441a-94e9-56eec6fc6b64\",\n",
+              "      \"pickable\": true\n",
+              "    }\n",
+              "  ],\n",
+              "  \"mapProvider\": \"carto\",\n",
+              "  \"mapStyle\": \"https://basemaps.cartocdn.com/gl/dark-matter-gl-style/style.json\",\n",
+              "  \"views\": [\n",
+              "    {\n",
+              "      \"@@type\": \"MapView\",\n",
+              "      \"controller\": true\n",
+              "    }\n",
+              "  ]\n",
+              "};\n",
+              "    const tooltip = true;\n",
+              "    const customLibraries = null;\n",
+              "    const configuration = null;\n",
+              "\n",
+              "    const deckInstance = createDeck({\n",
+              "                  container,\n",
+              "      jsonInput,\n",
+              "      tooltip,\n",
+              "      customLibraries,\n",
+              "      configuration\n",
+              "    });\n",
+              "\n",
+              "  </script>\n",
+              "</html>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: 11_mapas**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Documentação Oficial Folium](https://python-visualization.github.io/folium/latest/)\n",
+        "\n",
+        "[Documentação Oficial PyDeck](https://deckgl.readthedocs.io/en/latest/)\n",
+        "\n",
+        "[Fonte dos Dados - Inside Airbnb](https://insideairbnb.com/)\n",
+        "\n",
+        "[Google Maps](https://www.google.com/maps/place/New+York,+NY,+USA/@40.6976637,-74.1197637,11z/data=!3m1!4b1!4m5!3m4!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!8m2!3d40.7127753!4d-74.0059728)"
+      ],
+      "metadata": {
+        "id": "Yo11UUCh1Ox3"
+      }
     }
   ]
 }
