--- a/74_Data_Viz_Heatmap.ipynb
+++ b/74_Data_Viz_Heatmap.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHdmFyhrTLBy4pDf1GaBOk",
+      "authorship_tag": "ABX9TyNHnY83fWSEPAKOkyiS+0Z1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -558,6 +558,23 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: 12_heatmap**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "Dark Horse Analytics\n",
+        "\n",
+        "Heatmap Gallery\n",
+        "\n",
+        "Documentação Oficial do Seaborn"
+      ],
+      "metadata": {
+        "id": "wFbD8hi_7z5A"
+      }
     }
   ]
 }
