--- a/74_Data_Viz_Heatmap.ipynb
+++ b/74_Data_Viz_Heatmap.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHnY83fWSEPAKOkyiS+0Z1",
+      "authorship_tag": "ABX9TyPqmoOhomkWuHvxZlmyXgfb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -566,11 +566,11 @@
         "\n",
         "Links úteis:\n",
         "\n",
-        "Dark Horse Analytics\n",
+        "[Dark Horse Analytics](https://www.darkhorseanalytics.com/)\n",
         "\n",
-        "Heatmap Gallery\n",
+        "[Heatmap Gallery](https://python-graph-gallery.com/heatmap/)\n",
         "\n",
-        "Documentação Oficial do Seaborn"
+        "[Documentação Oficial do Seaborn](https://seaborn.pydata.org/generated/seaborn.heatmap.html)"
       ],
       "metadata": {
         "id": "wFbD8hi_7z5A"
