--- a/75_Data_Viz_Bar_Chart_Race.ipynb
+++ b/75_Data_Viz_Bar_Chart_Race.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdyKpjQbepztcCcSRtdr+0",
+      "authorship_tag": "ABX9TyOcYCtwy4KhPmIaOzP4vukl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,12 +69,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "FPjJ7gfbJX-w"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FPjJ7gfbJX-w",
+        "outputId": "1d8895dc-b694-4429-c667-0a5fcd07ac86"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/156.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m30.7/156.8 kB\u001b[0m \u001b[31m860.8 kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.2/156.8 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m156.8/156.8 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
+      "source": [
+        "# instalando a biblioteca\n",
+        "!pip install bar_chart_race -q"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importando o pacote\n",
+        "import bar_chart_race as bcr\n",
+        "\n",
+        "# carregando o conjunto de dados\n",
+        "df = bcr.load_dataset('covid19_tutorial')"
+      ],
+      "metadata": {
+        "id": "cHCEPliuKbmY"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Com o nosso df definido e pronto, basta plotá-lo!\n",
+        "\n",
+        "Para isso, vamos chamar o plot, definir os dados, e para fazer o embedding em um Jupyter Notebook, como o colab, basta definir o nome do arquivo como None."
+      ],
+      "metadata": {
+        "id": "ge5tDLpeKeRW"
+      }
     }
   ]
 }
