--- a/75_Data_Viz_Bar_Chart_Race.ipynb
+++ b/75_Data_Viz_Bar_Chart_Race.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8wYq3AAjKGEHJTBIXvyOy",
+      "authorship_tag": "ABX9TyO7HzBtMksRUJUsA+hJtwmv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6258,6 +6258,48 @@
       ],
       "metadata": {
         "id": "YRYkREswLNsG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# salvando como html\n",
+        "bcr_html = bcr.bar_chart_race(df=df, filename='bar_chart_race.html')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nhO7_hI7LR-2",
+        "outputId": "3dd1b890-958a-457a-cfba-76f0ce64f3e3"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/bar_chart_race/_make_chart.py:286: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "  ax.set_yticklabels(self.df_values.columns)\n",
+            "/usr/local/lib/python3.10/dist-packages/bar_chart_race/_make_chart.py:287: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "  ax.set_xticklabels([max_val] * len(ax.get_xticks()))\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Corrida de Gráfico de Barras\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "Notebook de apoio\n",
+        "Documentação Oficial Bar Chart Race\n",
+        "Richest People In The World - Data Lover"
+      ],
+      "metadata": {
+        "id": "MbopSV-WLXdt"
       }
     }
   ]
