--- a/75_Data_Viz_Bar_Chart_Race.ipynb
+++ b/75_Data_Viz_Bar_Chart_Race.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7HzBtMksRUJUsA+hJtwmv",
+      "authorship_tag": "ABX9TyMdb9F38TmAHk3QiLcjPFCQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6290,13 +6290,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Corrida de Gráfico de Barras\n",
+        "## **Extra: Corrida de Gráfico de Barras **\n",
         "\n",
         "Links úteis:\n",
         "\n",
-        "Notebook de apoio\n",
-        "Documentação Oficial Bar Chart Race\n",
-        "Richest People In The World - Data Lover"
+        "[Documentação Oficial Bar Chart Race](https://github.com/dexplo/bar_chart_race)\n",
+        "\n",
+        "[Richest People In The World - Data Lover ](https://www.youtube.com/watch?v=DtvVn4917AY)"
       ],
       "metadata": {
         "id": "MbopSV-WLXdt"
