--- a/76_Data_Viz_Interactive_Plots.ipynb
+++ b/76_Data_Viz_Interactive_Plots.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHjGAoJ1iA9HwqiFVhRmYY",
+      "authorship_tag": "ABX9TyNiTwSxypsqdgqexdSH2zcj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,12 +70,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "OMuzbKnINR0y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OMuzbKnINR0y",
+        "outputId": "68029003-3d8f-4875-be77-df0b194d17cb"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
+      "source": [
+        "# instalando o pacote\n",
+        "!pip install ipywidgets -q"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A documentação instrui que o código abaixo seja utilizado para que essas interações estejam disponíveis em Jupyter Notebooks. Entretanto, no Colab isso não é necessário. Caso você vá realizar esse tipo de plot em um Noteb\u0010ook local, utilize a função abaixo, e tome por referência a documentação, em tudo que diferir de lá nesse notebook."
+      ],
+      "metadata": {
+        "id": "SRVgUWJdN7wU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# jupyter nbextension enable --py widgetsnbextension"
+      ],
+      "metadata": {
+        "id": "7UtzBdGOOJBB"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Uma vez instalados, precisamos importar os pacotes. Aqui, importaremos algumas funções específicas do pacote, e o pacote inteiro, para facilitar nosso código."
+      ],
+      "metadata": {
+        "id": "WuDYf1y6OQmX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importando os pacotes necessários\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from ipywidgets import interact, fixed, interact_manual\n",
+        "import ipywidgets as widgets"
+      ],
+      "metadata": {
+        "id": "efDRM35GOSWp"
+      },
+      "execution_count": 3,
+      "outputs": []
     }
   ]
 }
