--- a/76_Data_Viz_Interactive_Plots.ipynb
+++ b/76_Data_Viz_Interactive_Plots.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6f1gxc95xnmVBJyfmRgRE",
+      "authorship_tag": "ABX9TyMCVvNGV+5ek1xfLmvG+c8B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3150,8 +3150,6 @@
         "interact(f, color=colors)"
       ],
       "metadata": {
-        "id": "RHOzv2oHPuZ1",
-        "outputId": "9e9760fd-ef58-469e-9efb-58dae38e67cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 575,
@@ -3164,7 +3162,9 @@
             "18decba24d664a5389b7a1cb5ee50d6e",
             "5b6cdc37ced14b24b376e48c1eeb9a17"
           ]
-        }
+        },
+        "id": "RHOzv2oHPuZ1",
+        "outputId": "9e9760fd-ef58-469e-9efb-58dae38e67cb"
       },
       "execution_count": 13,
       "outputs": [
@@ -3220,6 +3220,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: Criando Interações com os Plots**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Documentação Oficial iPyWidgets](https://ipywidgets.readthedocs.io/en/stable/)"
+      ],
+      "metadata": {
+        "id": "99s1QlvDP8o_"
+      }
     }
   ]
 }
