--- a/77_Data_Viz_Annotate.ipynb
+++ b/77_Data_Viz_Annotate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7gQk/ZSowtEZxtTBGFkH4",
+      "authorship_tag": "ABX9TyNHMdSd8r7KNYna3p/KpU2j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -284,19 +284,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Anotando e Customizando Gráficos com Data Storytelling\n",
+        "## **Anotando e Customizando Gráficos com Data Storytelling**\n",
         "\n",
         "Links úteis:\n",
         "\n",
-        "Documentação Oficial do Matplotlib\n",
+        "[Documentação Oficial do Matplotlib](https://matplotlib.org/stable/gallery/text_labels_and_annotations/annotation_demo.html)\n",
         "\n",
-        "Annotations - Matplotlib\n",
+        "[Annotations - Matplotlib](https://matplotlib.org/stable/users/explain/text/annotations.html)\n",
         "\n",
-        "Anotando em Plots - Python Data Science Handbook\n",
+        "[Anotando em Plots - Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/04.09-text-and-annotation.html)\n",
         "\n",
-        "Master plt.annotate() - Towards Data Science\n",
+        "Master plt.annotate() - [Towards Data Science ](https://towardsdatascience.com/finally-learn-to-annotate-place-text-in-any-part-of-the-plot-d9bcc93c153f)\n",
         "\n",
-        "Matplotlib.pyplot.annotate() - Geeks for Geeks"
+        "Matplotlib.pyplot.annotate() - [Geeks for Geeks](https://www.geeksforgeeks.org/matplotlib-pyplot-annotate-in-python/)"
       ],
       "metadata": {
         "id": "dabSJOzWXeOt"
